<resources>
    <string name="app_name">About Job</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="ratings">Ratings</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string>
    <string name="my_reviews">My reviews</string>
    <string name="settings">Settings</string>

    <string name="change">Change</string>
    <string name="change_name">Change Name</string>
    <string name="remove_account">Remove Account</string>
    <string name="profile_deleted">Your profile is deleted:(</string>
    <string name="failed_delete_user">Failed to delete your account!</string>
    <string name="remove_account_ask">Remove Account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="query_hint">Search company</string>

    <string name="salary">Salary</string>
    <string name="chief">Chief</string>
    <string name="workplace">Workplace</string>
    <string name="career">Career</string>
    <string name="collective">Collective</string>
    <string name="social_package">Employee benefits</string>

    <string name="pluses">Pluses</string>
    <string name="pluses_">Pluses (required)</string>
    <string name="minuses">Minuses</string>
    <string name="minuses_">Minuses (required)</string>
    <string name="working">Working</string>
    <string name="worked">Worked</string>
    <string name="interview">Interview</string>
    <string name="position_">Position (required)</string>
    <string name="position">Position</string>
    <string name="empoyment_date">Employment date</string>
    <string name="dismissal_date">Dismissal date</string>
    <string name="interview_date">Interview date</string>
    <string name="cancel">Cancel</string>
    <string name="review_added">Review added</string>
    <string name="error_review_add">Fill in the required fields</string>
    <string name="delete">Delete</string>
    <string name="review_deleted">Review deleted</string>
    <string name="undo">Undo</string>

    <string name="your_message">Your message</string>

    <string-array name="comments_change">
        <item>@string/delete</item>
        <item>@string/change</item>
    </string-array>

    <string name="like_inactive" translatable="false">likeInactive</string>
    <string name="like_active" translatable="false">likeActive</string>
    <string name="dislike_inactive" translatable="false">dislikeInactive</string>
    <string name="dislike_active" translatable="false">dislikeActive</string>

    <string name="network_error">Network error</string>
    <string name="something_went_wrong">Check your internet connection</string>
    <string name="retry">Try again</string>
    <string name="company_site">Company\'s site</string>
    <string name="city">City</string>
    <string name="city_">City (required)</string>
    <string name="last_reviews">Last 10 reviews</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="add_review">Add review</string>
    <string name="edit_review">Edit review</string>
    <string name="review_edited">Review edited</string>
    <string name="error_review_edit">@string/error_review_add</string>
    <string name="review">Review</string>
    <string name="no_reviews">There\'re no reviews about this company yet. Your review may be first</string>
    <string name="no_my_reviews">You don\'t add any reviews yet. \n\n To add review find company that you\'re working in or you worked in</string>
    <string name="no_recent_reviews">Nobody add no reviews yet. Your review may be first</string>
    <string name="profile_updated">"Profile updated</string>
    <string name="updating_error">"Updating failed"</string>

    <string name="message_log_out">Are you sure want to log out?</string>
    <string name="reviews_login">Login to see your reviews</string>
    <string name="account_login">Login to access your account</string>
    <string name="company_login">Login to add review</string>
    <string name="comment_login">Login to add comment</string>
    <string name="like_login">Login to like</string>
    <string name="dislike_login">Login to dislike</string>
    <string name="phone">Phone</string>
    <string name="add_name">Add name</string>
    <string name="show_all">Show all</string>
    <string name="hide">Hide</string>
    <string name="write_to_developers">Write to developers</string>
    <string name="no_description">The company has no description</string>

    <string name="email_support" translatable="false">support@aboutjob.ru</string>
    <string name="send_email">Send email</string>
    <string name="no_email_apps">There are no email clients installed</string>
    <string name="version">Version: %s</string>
    <string name="review_date_info">The exact date won\'t be shown but only the total numbers of days</string>
    <string name="recommended">I recommend for employment</string>
    <string name="not_recommended">I don\'t recommend for employment</string>
    <string name="show_more_companies">Show more companies</string>
    <string name="find_company">Find company</string>
    <string name="filter_params">Filter parameters</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="at_rating">At rating</string>
    <string name="at_salary">At salary</string>
    <string name="at_chief">At chief</string>
    <string name="at_workplace">At workplace</string>
    <string name="at_career">At career</string>
    <string name="at_collective">At collective</string>
    <string name="at_benefits">At employee benefits</string>
    <string name="at_popularity">At popularity</string>
    <string name="filter_empty">Your search returned no results</string>
    <string name="user_no_reviews">User don\'t have reviews</string>
    <string name="add_photo">Add photo</string>
    <string name="permision_read_files">Allow to add photos</string>
    <string name="select_photo">Select photo</string>
    <string name="dark_mode">Dark mode</string>

    <string-array name="work_status">
        <item>@string/working</item>
        <item>@string/worked</item>
        <item>@string/interview</item>
    </string-array>

    <string-array name="filter_reviews">
        <item>@string/at_rating</item>
        <item>@string/at_salary</item>
        <item>@string/at_chief</item>
        <item>@string/at_workplace</item>
        <item>@string/at_career</item>
        <item>@string/at_collective</item>
        <item>@string/at_benefits</item>
        <item>@string/at_popularity</item>
    </string-array>

    <plurals name="year">
        <item quantity="zero">%d years</item>
        <item quantity="one">%d year</item>
        <item quantity="two">%d years</item>
        <item quantity="few">%d years</item>
        <item quantity="many">%d years</item>
        <item quantity="other">%d years</item>
    </plurals>

    <plurals name="month">
        <item quantity="zero">%d months</item>
        <item quantity="one">%d month</item>
        <item quantity="two">%d months</item>
        <item quantity="few">%d months</item>
        <item quantity="many">%d months</item>
        <item quantity="other">%d months</item>
    </plurals>

    <plurals name="day">
        <item quantity="zero">%d days</item>
        <item quantity="one">%d day</item>
        <item quantity="two">%d days</item>
        <item quantity="few">%d days</item>
        <item quantity="many">%d days</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="reviews">
        <item quantity="zero">%d reviews</item>
        <item quantity="one">%d review</item>
        <item quantity="two">%d reviews</item>
        <item quantity="few">%d reviews</item>
        <item quantity="many">%d reviews</item>
        <item quantity="other">%d reviews</item>
    </plurals>
</resources>
